feat(DashboardModule): create an endpoint to serve dashboard information
